--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -46,7 +46,7 @@
         </div>
         }
         <div class="mb-3 text-center">
-            <button type="submit" class="btn btn-primary" [disabled]="isDisabled()">Se connecter</button>
+            <button type="submit" class="btn btn-primary fw-bold" [disabled]="isDisabled()">Se connecter</button>
         </div>
     </form>
 
