--- a/front/src/app/components/page-header/page-header.component.html
+++ b/front/src/app/components/page-header/page-header.component.html
@@ -1,5 +1,6 @@
 <div class="text-center d-flex justify-content-between ">
-    <div (click)="handleGoBack()"><i class="bi bi-arrow-left"></i> </div>
+    <div (click)="handleGoBack()" [class]="invisible()==true?'invisible':'visible'"><i class="bi bi-arrow-left"></i>
+    </div>
     <h1 class="mb-5">{{title()}}</h1>
     <div> </div>
 </div>
