--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -17,16 +17,15 @@
                 <div class="offcanvas-body d-flex flex-column justify-content-between">
                     <ul class="navbar-nav text-end">
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/articles" type="button"
-                                data-bs-toggle="offcanvas">Articles</a>
+                            <a class="nav-link" routerLink="/articles" data-bs-dismiss="offcanvas">Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/themes" type="button" data-bs-toggle="offcanvas">Themes</a>
+                            <a class="nav-link" routerLink="/themes" data-bs-dismiss="offcanvas">Themes</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav text-end justify-self-end">
                         <li>
-                            <a class="dropdown-item" routerLink="/profile" type="button" data-bs-toggle="offcanvas">
+                            <a class="dropdown-item" routerLink="/profile" data-bs-dismiss="offcanvas">
                                 <img src="images/user.png" height="36" alt="user">
                             </a>
                         </li>
@@ -59,7 +58,7 @@
                     <a class="nav-link" routerLink="/themes" routerLinkActive="router-link-active">Themes</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" routerLink="/profile" type="button" data-bs-toggle="offcanvas">
+                    <a class="dropdown-item" routerLink="/profile">
                         <img src="images/user.png" height="36" alt="user">
                     </a>
                 </li>
