--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -62,7 +62,7 @@
         </div>
         }
         <div class="mb-3 text-center">
-            <button type="submit" class="btn btn-primary  fw-bold">Se connecter</button>
+            <button type="submit" class="btn btn-primary  fw-bold">S'inscrire</button>
         </div>
     </form>
 
