--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-md bd-body-primart">
+<nav class="navbar navbar-expand-md bd-body-primary">
     <div class="container">
         <a class="navbar-brand" routerLink="/">
             <img src="images/logo.png" height="81" alt="mdd">
         </a>
+
         <div class="d-md-none">
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
