--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -3,7 +3,7 @@
 @import "../node_modules/bootstrap/scss/variables";
 
 $primary: #7763c5;
-$secondary: $yellow-300;
+$secondary: #f5f5f5;
 $success: $green;
 $info: $cyan;
 $warning: $yellow;
