--- a/front/src/app/pages/articles/article-details/article-details.component.html
+++ b/front/src/app/pages/articles/article-details/article-details.component.html
@@ -6,25 +6,25 @@
             <div class="d-flex flex-column flex-md-row ">
                 <div (click)="handleGoBack()"><i class="bi bi-arrow-left"></i>
                 </div>
-                <h1 class="mb-5 ms-md-3 ">{{article?.title}}</h1>
+                <h1 class="mb-5 ms-md-3 ">{{article().title}}</h1>
             </div>
         </div>
 
         <div class="d-flex mb-3 flex-column flex-md-row">
-            <div class="col-12 col-md-3">Date : {{article?.created_at}} </div>
-            <div class="col-12 col-md-3">Auteur : {{article?.author_username}}</div>
-            <div class="col-12 col-md-3">Thème : {{article?.topic_name}}</div>
+            <div class="col-12 col-md-3">Date : {{article().created_at}} </div>
+            <div class="col-12 col-md-3">Auteur : {{article().author_username}}</div>
+            <div class="col-12 col-md-3">Thème : {{article().topic_name}}</div>
         </div>
 
         <div class="col">
-            <p class="card-text">{{article?.content}} </p>
+            <p class="card-text">{{article().content}} </p>
         </div>
     </div>
 </div>
 <div class="col-12">
     <hr>
     <h2>Commentaires</h2>
-    @for (comment of comments; track comment.id) {
+    @for (comment of comments(); track comment.id) {
     <div class="card  my-3 border-0">
         <div class="card-body d-flex flex-column flex-md-row flex-md-row-reverse me-md-auto">
             <p class="bg-secondary p-3 rounded-3 align-self-start">{{comment.content}}</p>
@@ -33,3 +33,4 @@
     </div>
     }
 </div>
+<app-comment-form [articleId]="article().id!" (refetchComments)="handleRefetchComments()" />
